# protobuf-bug-report

./: CMakeLists.txt  Dockerfile  README  launch.sh  reproduce.sh
src/: main.cpp  messages.proto
